#!/usr/bin/env tsx

import { SystemProgramService, createClient, createGrpcTransport, AccountService } from "@protosol/api";
import { CreateRequest, TransferRequest } from "@protosol/api";

const BACKEND_ENDPOINT = "http://localhost:50051";

async function testSystemService() {
  console.log("üîß Testing SystemProgramService gRPC connectivity...");
  
  try {
    // Create gRPC transport and clients
    const transport = createGrpcTransport({
      baseUrl: BACKEND_ENDPOINT,
    });
    
    const systemClient = createClient(SystemProgramService, transport);
    const accountClient = createClient(AccountService, transport);
    
    console.log("‚úÖ gRPC clients created successfully");
    
    // Generate keypairs for testing
    console.log("\nüß™ Generating keypairs for testing...");
    const fromKeyPair = await accountClient.generateNewKeyPair({});
    const toKeyPair = await accountClient.generateNewKeyPair({});
    
    if (!fromKeyPair.keyPair?.publicKey || !toKeyPair.keyPair?.publicKey) {
      throw new Error("Failed to generate keypairs");
    }
    
    console.log(`‚úÖ From account: ${fromKeyPair.keyPair.publicKey}`);
    console.log(`‚úÖ To account: ${toKeyPair.keyPair.publicKey}`);
    
    // Test 1: Create (Create account instruction)
    console.log("\nüß™ Test 1: Create Account Instruction");
    const createResp = await systemClient.create({
      payer: fromKeyPair.keyPair.publicKey,
      newAccount: toKeyPair.keyPair.publicKey,
      lamports: BigInt(1000000), // 0.001 SOL
      space: BigInt(0), // Basic account
      owner: "11111111111111111111111111111111" // System program
    });
    
    console.log("‚úÖ Create instruction successful:");
    console.log(`   Instruction Program ID: ${createResp.programId}`);
    console.log(`   Accounts Length: ${createResp.accounts?.length}`);
    console.log(`   Data Length: ${createResp.data?.length}`);
    
    // Test 2: Transfer
    console.log("\nüß™ Test 2: Transfer Instruction");
    const transferResp = await systemClient.transfer({
      from: fromKeyPair.keyPair.publicKey,
      to: toKeyPair.keyPair.publicKey,
      lamports: BigInt(500000) // 0.0005 SOL
    });
    
    console.log("‚úÖ Transfer instruction successful:");
    console.log(`   Instruction Program ID: ${transferResp.programId}`);
    console.log(`   Accounts Length: ${transferResp.accounts?.length}`);
    console.log(`   Data Length: ${transferResp.data?.length}`);
    
    // Validate instruction structures
    console.log("\n‚úÖ Instruction validation:");
    if (createResp) {
      console.log(`   Create - Program ID: ${!!createResp.programId}`);
      console.log(`   Create - Accounts: ${createResp.accounts?.length || 0}`);
      console.log(`   Create - Data: ${createResp.data?.length || 0} bytes`);
    }
    
    if (transferResp) {
      console.log(`   Transfer - Program ID: ${!!transferResp.programId}`);
      console.log(`   Transfer - Accounts: ${transferResp.accounts?.length || 0}`);
      console.log(`   Transfer - Data: ${transferResp.data?.length || 0} bytes`);
    }
    
    console.log("\nüéâ SystemProgramService tests completed successfully!");
    return true;
    
  } catch (error: any) {
    console.error("‚ùå SystemProgramService test failed:", error);
    console.error("   Stack:", error.stack);
    return false;
  }
}

// Run the test if this script is executed directly
if (import.meta.url === `file://${process.argv[1]}`) {
  testSystemService()
    .then(success => {
      console.log(success ? "\n‚úÖ All tests passed!" : "\n‚ùå Tests failed!");
      process.exit(success ? 0 : 1);
    })
    .catch(error => {
      console.error("‚ùå Unexpected error:", error);
      process.exit(1);
    });
}

export { testSystemService };